Fixed alignment of blue buttons in table header

--- a/modules/cms/client/scss/_partials/_table-header.scss
+++ b/modules/cms/client/scss/_partials/_table-header.scss
@@ -9,6 +9,7 @@ section.table-header {
         display: flex;
         flex-flow: wrap;
         flex-wrap: wrap;
+        align-items: center;
     }
 
     .left {
